[package]
name = "tokenized-vault"
version = "0.1.0"
description = "ERC-4626-style tokenized vault for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tokenized_vault"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"


[dev-dependencies]
mollusk-svm = "0.7.2"
solana-sdk = "2.1.7"

